# spotify_playlist_sync

./: .gitignore  Dockerfile  README.md  config.yaml.sample  docker-compose.yml  pyproject.toml  requirements.txt  spotify_playlist_sync.py
