[project]
name = "spotify-playlist-sync"
version = "0.1.0"
description = "Sync Spotify playlists across accounts"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mergedeep==1.3.4",
    "pyyaml==6.0.3",
    "schedule==1.2.2",
    "spotipy==2.26.0",
]

[project.scripts]
spotify-sync = "spotify_playlist_sync:run"

[tool.uv]
package = true
